Pagination Controlling & active button done

--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -54,4 +54,10 @@
 .pagination button:active {
     background-color: #FF9900;
     color: white;
-} 
+}
+
+.pagination button.selected {
+    background-color: #FF9900;
+    color: white;
+    border-color: #FF9900;
+}
